2003-06-01  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/gnc-date-format.*: Create a new "date format"
	  widget to let the user choose a date format (and see the results
	  of what the date would look like).
	* src/gnome-utils/Makedile.am: add gnc-date-format files to the build
	* src/gnome/dialog-print-check.c: use the new date-format widget
	* src/gnome/glade/print.glade: remove data that is now part of the
	  date-format widget.

2003-05-30  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-gnome/dialog-customer.c:
	* src/business/business-gnome/dialog-vendor.c:
	  - Fix the window title to use the company name, not the contact name
	  - Change the message when the company name is left blank.
	Fixes #109754

	* src/gnome/dialog-print-check.c: a simple change -- use a globally-
	  defined option-menu helper function instead of defining our own
	  copy for no particular reason.

2003-05-30  Christian Stimming  <stimming@tuhh.de>

	* lib/guppi-legend.patch: Include patch for Guppi that fixes
	reversed legend problem.

2003-05-29  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/glade/register.glade: add sort entries for Action and Notes
	* src/gnome/gnc-split-reg.[ch]: add ability to sort by Action and Notes
	Fixes #113990.

2003-05-29  David Hampton  <hampton@employees.org>

	* src/engine/iso-4217-currencies.scm: Update the Polish Zloty for
	its new ISO currency code.

	* src/engine/gnc-commodity.c: Convert from the old Zloty code to
	the new one.

2003-05-30  Christian Stimming  <stimming@tuhh.de>

	* src/report/standard-reports/category-barchart.scm: Re-enable
	reversed legend in stacked barcharts. Needs Guppi 0.40.4
	a.k.a. Guppi CVS, though, to actually work.

2003-05-29  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-transfer.c: Make sure the amount
	stays a decimal number instead of some fraction.

2003-05-29  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncInvoice.[ch]: add APIs to get