@@ -21,14 +21,12 @@ libgncmod_hbci_la_SOURCES = \
 
 # Must be included in tarball because they are listed in POTFILES.in
 libgncmod_hbci_la_empty = \
-  druid-hbci-final.c \
   gnc-hbci-actions.c
 
 noinst_HEADERS = \
   dialog-daterange.h \
   dialog-hbcitrans.h \
   dialog-pass.h \
-  druid-hbci-final.h \
   druid-hbci-initial.h \
   druid-hbci-utils.h \
   gnc-hbci-actions.h \
