@@ -45,9 +45,6 @@
 #include <openhbci/mediumrdhbase.h>
 
 #include <openhbci.h>
-#ifndef OPENHBCI_VERSION_BUILD
-#  define OPENHBCI_VERSION_BUILD 0
-#endif
 
 typedef enum _infostate {
   INI_ADD_BANK,
@@ -670,12 +667,7 @@ on_configfile_next (GnomeDruidPage *gnomedruidpage,
       return TRUE;
   }
   // no libchipcard? Make that button greyed out
-  if 
-#if ((OPENHBCI_VERSION_MAJOR>0) || (OPENHBCI_VERSION_MINOR>9) || (OPENHBCI_VERSION_PATCHLEVEL>9) || (OPENHBCI_VERSION_BUILD>13))
-      (HBCI_API_mediumType(info->api, "DDVCard") != MediumTypeCard)
-#else /* openhbci > 0.9.9.13 */
-      (! HBCI_Hbci_hasLibchipcard ()) 
-#endif /* openhbci <= 0.9.9.13 */
+  if (HBCI_API_mediumType(info->api, "DDVCard") != MediumTypeCard)
     {
       gtk_widget_set_sensitive (GTK_WIDGET (info->mediumddv),
 				FALSE);
@@ -939,7 +931,6 @@ on_userid_next (GnomeDruidPage  *gnomedruidpage,
       mediumtype = "DDVCard";
     }
 
-#if (OPENHBCI_VERSION_MAJOR>0) || (OPENHBCI_VERSION_MINOR>9) || (OPENHBCI_VERSION_PATCHLEVEL>9) || (OPENHBCI_VERSION_BUILD>5)
     medium = HBCI_API_createNewMedium (api, 
 				       mediumtype,
 				       FALSE,
@@ -947,13 +938,6 @@ on_userid_next (GnomeDruidPage  *gnomedruidpage,
 				       HBCI_Bank_bankCode (bank),
 				       userid, 
 				       mediumname, &err);
-#else /* openhbci > 0.9.9.5 */
-    medium = HBCI_API_createNewMedium (api, 
-				       HBCI_Bank_countryCode (bank),
-				       HBCI_Bank_bankCode (bank),
-				       userid, 
-				       mediumname, secmode, &err);
-#endif /* openhbci > 0.9.9.5 */
     g_free(mediumname);
 
     if (medium == NULL) {
@@ -977,11 +961,7 @@ on_userid_next (GnomeDruidPage  *gnomedruidpage,
       
     /* Test mounting only for DDV cards. RDH files should work... */
     if (secmode == HBCI_SECURITY_DDV) {
-#if (OPENHBCI_VERSION_MAJOR>0) || (OPENHBCI_VERSION_MINOR>9) || (OPENHBCI_VERSION_PATCHLEVEL>9) || (OPENHBCI_VERSION_BUILD>5)
       err = HBCI_Medium_mountMedium (medium, NULL);
-#else /* openhbci > 0.9.9.5 */
-      err = HBCI_Medium_mountMedium (medium, newuser, NULL);
-#endif /* openhbci > 0.9.9.5 */
       if (err != NULL) {
 	printf("on_userid_next: Mounting medium failed: %s.\n",
 	       HBCI_Error_message (err));
